@@ -18,6 +18,7 @@ since 1999.  If I missed your name, let me know.
 * Erwan Arzur
 * Volker Aust
 * Hendrik Baecker
+* Markus Baertschi
 * Michael Bailey
 * Luigi Balzano
 * Sebastien Barbereau
@@ -135,6 +136,7 @@ since 1999.  If I missed your name, let me know.
 * Gerhard Lausser
 * William Leibzon
 * Pedro Leite
+* Bernard Li
 * Joerg Linge
 * Michael Little
 * Shad Lords
@@ -159,6 +161,7 @@ since 1999.  If I missed your name, let me know.
 * Gerd Mueller
 * Bob (Netshell)
 * Time Niemueller
+* Sven Nierlein
 * Michael O'Reilly
 * Tomer Okavi
 * Vadim Okun
@@ -172,6 +175,7 @@ since 1999.  If I missed your name, let me know.
 * Janet Post
 * Paul Pot
 * Marc Powell
+* William Preston
 * Patrick Proy
 * Luiz Felipe R E
 * Alain Radix
